# stock-screening-boost

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
python_services/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-refchecker.txt  requirements.txt
python_services/app/: main.py
python_services/app/contracts/: __init__.py  admin.py  common.py  intelligence.py  market.py  meta.py
python_services/app/gateway/: __init__.py  common.py  external_capability_gateway.py  intelligence_gateway.py  market_context_gateway.py  market_gateway.py  timing_gateway.py
python_services/app/infrastructure/: __init__.py
python_services/app/jobs/: __init__.py  common.py  prewarm_hot_themes.py  refresh_concepts.py  refresh_universe.py
python_services/app/policies/: __init__.py  cache_policy.py  retry_policy.py
python_services/app/providers/: __init__.py
python_services/app/routers/: admin_jobs.py  intelligence_v1.py  market_context_v1.py  (+2 more)
python_services/tests/: test_akshare_adapter.py  test_external_capability_gateway.py  test_gateway_jobs.py  test_gateway_v1.py  test_gateway_v1_intelligence.py  test_intelligence_strict_adapter.py  test_market_context_gateway.py  test_market_context_v1.py  test_screening_provider_factory.py  test_screening_v1.py  test_screening_workbench_services.py  test_tavily_capability_client.py  test_timing_gateway.py  test_timing_v1.py  test_tushare_screening_provider.py  test_tushare_timing_provider.py
(+855 files in other folders)
